@@ -41,6 +41,7 @@
 #include <sys/time.h>
 #include <sys/types.h>
 #include <sys/param.h>
+#include <sys/stat.h>
 #include <errno.h>
 
 #include <ftsprivate/fpe.h>
@@ -61,7 +62,7 @@ fts_symbol_t fts_get_default_root_directory( void)
   return fts_new_symbol( DEFAULT_ROOT);
 }
 
-fts_symbol_t fts_get_default_user_directory(void)
+static fts_symbol_t fts_get_default_user_directory(void)
 {
   char* home;
   char* jmax_user_dir;
@@ -71,40 +72,66 @@ fts_symbol_t fts_get_default_user_directory(void)
 
   jmax_user_dir = getenv("JMAX_PREF_DIR");
   if (NULL == jmax_user_dir)
-  {
-    home = getenv("HOME");
-    /* don'"t forget to add '/' and '\0' */
-    size = strlen(home) + strlen(PREF_DIR) + 2;
-    jmax_user_dir = (char*)malloc(size * sizeof(char*)); 
-    strncpy(jmax_user_dir + cumul, home, strlen(home));
-    cumul += strlen(home);
-    strncpy(jmax_user_dir + cumul , "/", 1);
-    cumul += 1;
-    strncpy(jmax_user_dir + cumul, PREF_DIR, strlen(PREF_DIR));
-    cumul += strlen(PREF_DIR);
-    jmax_user_dir[cumul] = '\0';
-    s_jmax_user_dir = fts_new_symbol(jmax_user_dir);
-    free(jmax_user_dir);
-  }
+    {
+      home = getenv("HOME");
+      /* don'"t forget to add '/' and '\0' */
+      size = strlen(home) + strlen(PREF_DIR) + 2;
+      jmax_user_dir = (char*)malloc(size * sizeof(char*)); 
+      strncpy(jmax_user_dir + cumul, home, strlen(home));
+      cumul += strlen(home);
+      strncpy(jmax_user_dir + cumul , "/", 1);
+      cumul += 1;
+      strncpy(jmax_user_dir + cumul, PREF_DIR, strlen(PREF_DIR));
+      cumul += strlen(PREF_DIR);
+      jmax_user_dir[cumul] = '\0';
+      s_jmax_user_dir = fts_new_symbol(jmax_user_dir);
+      free(jmax_user_dir);
+    }
   else
-  {
-    s_jmax_user_dir = fts_new_symbol(jmax_user_dir);
-  }
+    {
+      s_jmax_user_dir = fts_new_symbol(jmax_user_dir);
+    }
 
   return s_jmax_user_dir;
 }
 
 fts_symbol_t
-fts_get_user_project( void)
+fts_get_user_project( int create)
 {
   char path[MAXPATHLEN];
+  char *p;
 
   fts_make_absolute_path(fts_get_default_user_directory(), fts_s_default_project, path, MAXPATHLEN);
-  if (fts_file_exists(path) && fts_is_file(path)) {
+  if ( !create)
+    {
+      if (fts_file_exists(path) && fts_is_file(path))
+	return fts_new_symbol(path);
+
+      return NULL;
+    }
+
+  if (fts_file_exists(path) && fts_is_file(path))
     return fts_new_symbol(path);
-  }
-  
-  return NULL;
+
+  /* create the directory if necessary */
+  p = path+1;
+  while ((p = strchr( p, '/')) != NULL)
+    {
+      *p = '\0';
+
+      fprintf( stderr, "Creating \"%s\"\n", path);
+
+      if (mkdir( path, 0755) < 0)
+	{
+	  if (errno != EEXIST)
+	    return NULL;
+	}
+
+      *p = '/';
+      p++;
+    }
+
+  return fts_new_symbol( path);
 }
 
 fts_symbol_t 
@@ -113,16 +140,15 @@ fts_get_system_project( void)
   char path[MAXPATHLEN];
 
   fts_make_absolute_path(DEFAULT_ROOT, fts_s_default_project, path, MAXPATHLEN);
-  if (fts_file_exists(path) && fts_is_file(path)) {
+  if (fts_file_exists(path) && fts_is_file(path))
     return fts_new_symbol(path);
-  }
 
   return NULL;  
 }
 
 
 fts_symbol_t 
-fts_get_user_configuration(void)
+fts_get_user_configuration( int create)
 {
   char path[MAXPATHLEN];
   fts_make_absolute_path(fts_get_default_user_directory(), fts_s_default_config, path, MAXPATHLEN);
@@ -162,18 +188,18 @@ fts_status_t fts_load_library( const char *filename, const char *symbol)
   handle = dlopen( filename, RTLD_NOW | RTLD_GLOBAL);
 
   if (!handle)
-  {
-    strcpy( error_description, dlerror());
-    return &load_library_error;
-  }
+    {
+      strcpy( error_description, dlerror());
+      return &load_library_error;
+    }
 
   fun = (void (*)(void))dlsym( handle, symbol);
 
   if ( fun == NULL)
-  {
-    strcpy( error_description, dlerror());
-    return &load_library_error;
-  }
+    {
+      strcpy( error_description, dlerror());
+      return &load_library_error;
+    }
 
   (*fun)();
 
@@ -195,9 +221,8 @@ fts_status_t fts_load_library( const char *filename, const char *symbol)
 #undef ENABLE_DENORMALIZED_TRAPS
 
 
-/* (Francois, dechelle@ircam.fr                                                */
 /* As Linux does not provide (yet?) a way to access the status of the          */
-/* floating-point unit, it is done by hand using __asm__. Great ;-(            */
+/* floating-point unit, it is done by hand using __asm__.                      */
 
 /* --------------------------------------------------------------------------- */
 /* Pentium FPU Control Word                                                    */
@@ -401,10 +426,10 @@ static void set_priority( int delta)
   sp.sched_priority = sched_get_priority_max( SCHED_FIFO) + delta;
 
   if ( sched_setscheduler( 0, SCHED_FIFO, &sp) < 0)
-  {
-    fts_log("[sched] cannot set scheduling policy to SCHED_FIFO with priority %d\n",
-	    sp.sched_priority);
-  }    
+    {
+      fts_log("[sched] cannot set scheduling policy to SCHED_FIFO with priority %d\n",
+	      sp.sched_priority);
+    }    
 }
 
 static void abandon_root( void)
@@ -438,12 +463,12 @@ static void watchdog_low( void)
   signal( SIGCHLD, sigchld_signal_handler);
 
   while (1)
-  {
-    if (write( wdpipe[1], "\n", 1) < 1)
-      exit( 1);
+    {
+      if (write( wdpipe[1], "\n", 1) < 1)
+	exit( 1);
 
-    sleep( 1);
-  }
+      sleep( 1);
+    }
 }
 
 static void my_fd_zero( fd_set *fds) __attribute__ ((no_check_memory_usage));
@@ -470,37 +495,37 @@ static void watchdog_high( int fts_pid)
   signal( SIGCHLD, sigchld_signal_handler);
 
   while (1)
-  {
-    struct timeval timeout;
-    fd_set rfds;
-    int r;
+    {
+      struct timeval timeout;
+      fd_set rfds;
+      int r;
 
-    timeout.tv_sec = (armed) ? 1 : 5;
-    timeout.tv_usec = 0;
+      timeout.tv_sec = (armed) ? 1 : 5;
+      timeout.tv_usec = 0;
 
-    my_fd_zero( &rfds);
-    my_fd_set( wdpipe[0], &rfds);
+      my_fd_zero( &rfds);
+      my_fd_set( wdpipe[0], &rfds);
       
-    r = select( wdpipe[0]+1, &rfds, 0, 0, &timeout);
+      r = select( wdpipe[0]+1, &rfds, 0, 0, &timeout);
 
-    if (r > 0)
-    {
-      char buffer[100];
+      if (r > 0)
+	{
+	  char buffer[100];
 
-      if ( read( wdpipe[0], &buffer, 100) <= 0)
+	  if ( read( wdpipe[0], &buffer, 100) <= 0)
+	    exit( 1);
+
+	  armed = 0;
+	}
+      else if (r == 0)
+	{
+	  armed = 1;
+	  kill( fts_pid, SIGHUP);
+	  fts_log( "watchdog waking up\n"); 
+	}
+      else
 	exit( 1);
-
-      armed = 0;
     }
-    else if (r == 0)
-    {
-      armed = 1;
-      kill( fts_pid, SIGHUP);
-      fts_log( "watchdog waking up\n"); 
-    }
-    else
-      exit( 1);
-  }
 }
 
 static int do_fork( void)
@@ -508,10 +533,10 @@ static int do_fork( void)
   int pid;
 
   if ((pid = fork()) < 0)
-  {
-    fts_log( "cannot fork (%s)\n", strerror( errno));
-    exit( 2);
-  }
+    {
+      fts_log( "cannot fork (%s)\n", strerror( errno));
+      exit( 2);
+    }
 
   return pid;
 }
@@ -521,10 +546,10 @@ static void start_watchdog( void)
   int child_pid;
 
   if (pipe( wdpipe) < 0)
-  {
-    fprintf( stderr, "cannot create pipe (%s)\n", strerror( errno));
-    return;
-  }
+    {
+      fprintf( stderr, "cannot create pipe (%s)\n", strerror( errno));
+      return;
+    }
 
   if ((child_pid = do_fork()))
     watchdog_low();
@@ -605,13 +630,13 @@ void* thread_manager_run_thread(void* arg)
   time_req.tv_nsec = delay_ms * 1000 * 1000;
 
   while(1)
-  {
-    if (0 == thread_func->is_dead)
     {
-      method(object, fts_system_inlet, symbol, ac, at);
+      if (0 == thread_func->is_dead)
+	{
+	  method(object, fts_system_inlet, symbol, ac, at);
+	}
+      nanosleep(&time_req, &time_rem);
     }
-    nanosleep(&time_req, &time_rem);
-  }
 
   return 0;
 }
@@ -631,72 +656,72 @@ void* thread_manager_main(void* arg)
   thread_manager_t* manager = (thread_manager_t*)arg;
 
   while(1)
-  {
-    work_done = 0;
-    /* Is there some data in create FIFO */
-    if (fts_fifo_read_level(&manager->create_fifo) >= sizeof(fts_atom_t))
     {
-      fts_atom_t* atom = (fts_atom_t*)fts_fifo_read_pointer(&manager->create_fifo);	    
-      fts_thread_worker_t* worker;
-
-      fts_fifo_incr_read(&manager->create_fifo, sizeof(fts_atom_t));
-
-      worker = (fts_thread_worker_t*)fts_get_pointer(atom);
-	    
-      success = pthread_create((pthread_t *)&worker->id,
-			       NULL,
-			       thread_manager_run_thread,
-			       (void*)worker->thread_function);
-      if (0 != success)
-      {
-	post("[thread_manager] cannot start a new thread \n");
-      }
-      else
-      {
-	/* try to detach thread */
-	success = pthread_detach(worker->id);
-	if (0 != success)
+      work_done = 0;
+      /* Is there some data in create FIFO */
+      if (fts_fifo_read_level(&manager->create_fifo) >= sizeof(fts_atom_t))
 	{
-	  post("[thread manager] cannot detach thread %d \n", worker->id);
-	}
-	work_done++;
+	  fts_atom_t* atom = (fts_atom_t*)fts_fifo_read_pointer(&manager->create_fifo);	    
+	  fts_thread_worker_t* worker;
 
-      }
+	  fts_fifo_incr_read(&manager->create_fifo, sizeof(fts_atom_t));
 
-    }
-    /* Is there some data in cancel FIFO */
-    if (fts_fifo_read_level(&manager->cancel_fifo) >= sizeof(fts_atom_t))
-    {
-      fts_atom_t* atom = (fts_atom_t*)fts_fifo_read_pointer(&manager->cancel_fifo);	    
-      fts_thread_worker_t* worker;
-
-      fts_fifo_incr_read(&manager->cancel_fifo, sizeof(fts_atom_t));
-
-      worker = (fts_thread_worker_t*)fts_get_pointer(atom);
+	  worker = (fts_thread_worker_t*)fts_get_pointer(atom);
 	    
-      success = pthread_cancel(worker->id);
-      if (0 != success)
-      {
-	if (ESRCH == success)
+	  success = pthread_create((pthread_t *)&worker->id,
+				   NULL,
+				   thread_manager_run_thread,
+				   (void*)worker->thread_function);
+	  if (0 != success)
+	    {
+	      post("[thread_manager] cannot start a new thread \n");
+	    }
+	  else
+	    {
+	      /* try to detach thread */
+	      success = pthread_detach(worker->id);
+	      if (0 != success)
+		{
+		  post("[thread manager] cannot detach thread %d \n", worker->id);
+		}
+	      work_done++;
+
+	    }
+
+	}
+      /* Is there some data in cancel FIFO */
+      if (fts_fifo_read_level(&manager->cancel_fifo) >= sizeof(fts_atom_t))
 	{
-	  post("[thread manager] no such thread \n");
-	}
-	post("[thread manager] error while cancelling thread \n");
-      }
-      work_done++;
-    }
-    if (0 == work_done)
-    {	
-      int delay_ms = manager->delay_ms;
-      struct timespec time_req;
-      struct timespec time_rem;
-      time_req.tv_sec = 0;
-      time_req.tv_nsec = delay_ms * 1000 * 1000;
+	  fts_atom_t* atom = (fts_atom_t*)fts_fifo_read_pointer(&manager->cancel_fifo);	    
+	  fts_thread_worker_t* worker;
+
+	  fts_fifo_incr_read(&manager->cancel_fifo, sizeof(fts_atom_t));
+
+	  worker = (fts_thread_worker_t*)fts_get_pointer(atom);
 	    
-      /* post("[thread_manager] thread is running \n"); */
-      nanosleep(&time_req, &time_rem);
+	  success = pthread_cancel(worker->id);
+	  if (0 != success)
+	    {
+	      if (ESRCH == success)
+		{
+		  post("[thread manager] no such thread \n");
+		}
+	      post("[thread manager] error while cancelling thread \n");
+	    }
+	  work_done++;
+	}
+      if (0 == work_done)
+	{	
+	  int delay_ms = manager->delay_ms;
+	  struct timespec time_req;
+	  struct timespec time_rem;
+	  time_req.tv_sec = 0;
+	  time_req.tv_nsec = delay_ms * 1000 * 1000;
+	    
+	  /* post("[thread_manager] thread is running \n"); */
+	  nanosleep(&time_req, &time_rem);
+	}
     }
-  }
     
   return NULL;
 }
