@@ -61,7 +61,7 @@ fts_symbol_t fts_get_default_root_directory( void)
 }
 
 fts_symbol_t
-fts_get_user_project( void)
+fts_get_user_project( int create)
 {
   char* home;
   char path[MAXPATHLEN];
@@ -90,7 +90,7 @@ fts_get_system_project( void)
 
 
 fts_symbol_t
-fts_get_user_configuration( void)
+fts_get_user_configuration( int create)
 {
   char* home;
   char path[MAXPATHLEN];
